# ai_code_doc_generator

./: .gitignore  README.md  pyproject.toml
src/ai/: ai_documentation_generator.py
src/cli/: main.py
src/mdx_generator/: mdx_formatter.py
